--- a/problems/975.odd-even-jump.md
+++ b/problems/975.odd-even-jump.md
@@ -146,6 +146,20 @@ class Solution:
 
 解决这个问题的方法最简单的莫过于使用两次排序，具体见下方代码区。
 
+现在已经有了两个数组，这两个数组可以帮助我们
+
+- **快速**找到下一个最小的比其大（或等于）的数。（奇数跳）
+- **快速**找到下一个最大的比其小（或等于）的数。（偶数跳）
+
+数据已经预处理完毕。接下来，只需要从结果倒推即可。这提示我们从后往前遍历。
+
+算法：
+
+- 使用前面的方法预处理出 next_higher 和 next_lower
+- 使用两个数组 higher 和 lower。higher[i] 表示是否可从 i 开始通过跳高的方式奇偶跳到达数组最后一项，lower 也是类似。
+- 从后往前倒推遍历。如果 lower[next_higher[i]] 为 true 说明 i 是可以通过跳高的方式奇偶跳到达数组最后一项的。higher[next_lower[i]] 也是类似。
+- 最后返回 higher 中 为 true 的个数。
+
 ## 代码
 
 代码支持： Python3, CPP
@@ -187,6 +201,19 @@ class Solution:
 
 - 时间复杂度：$$O(NlogN)$$
 - 空间复杂度：$$O(N)$$
+
+有的同学好奇为什么不考虑 lower。类似：
+
+```py
+ans = 1
+for i in range(n - 2, -1, -1):
+    higher[i] = lower[next_higher[i]]
+    lower[i] = higher[next_lower[i]]
+    ans += higher[i] or lower[i]
+return ans
+```
+
+根本原因是题目**要求我们必须从奇数跳开始**，而不是能偶数跳开始。如果题目不限制奇数跳和偶数跳，你可以自己自由选择的话，就必须使用上面的代码啦。
 
 更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 
