--- a/problems/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array.md
+++ b/problems/1526.minimum-number-of-increments-on-subarrays-to-form-a-target-array.md
@@ -57,7 +57,7 @@ https://leetcode-cn.com/problems/minimum-number-of-increments-on-subarrays-to-fo
 
 ## 思路
 
-首先我们要有前缀和以及查分的知识。这里简单讲述一下：
+首先我们要有前缀和以及差分的知识。这里简单讲述一下：
 
 - 前缀和 pres：对于一个数组 A [1,2,3,4]，它的前缀和就是 [1,1+2,1+2+3,1+2+3+4]，也就是 [1,3,6,10]，也就是说前缀和 $pres[i] =\sum_{n=0}^{n=i}A[i]$
 - 差分数组 d：对于一个数组 A [1,2,3,4]，它的差分数组就是 [1,2-1,3-2,4-3]，也就是 [1,1,1,1]，也就是说差分数组 $d[i] = A[i] - A[i-1](i > 0)$，$d[i] = A[i](i == 0)$
@@ -153,12 +153,12 @@ k = 2
 解决问题的关键有两点:
 
 - 定义函数 possible(target)，其功能是**在 K 步之内，每次都只能对 size 大小的子数组+1，是否可以满足数组的最小值>=target**。
-- 有了上面的铺垫。我们要找的其实就是满足 possible(target) 的最大的 target。
+- 有了上面的铺垫。我们要找的其实就是 possible(target)为 true 的最大的 target。
 
 这里有个关键点，那就是
 
 - 如果 possible(target)为 true。那么 target 以下的都不用看了，肯定都满足。
-- 如果 possible(target)为 false。那么 target 以上的都不用看了，肯定都满足。
+- 如果 possible(target)为 false。那么 target 以上的都不用看了，肯定都不满足。
 
 也就是说无论如何我们都能将解空间缩小一半，这提示我们使用二分法。结合前面的知识”我们要找的其实就是满足 possible(target) 的最大的 target“，可知道应该使用**最右二分**，如果对最右二分不熟悉的可以看下[二分讲义](https://github.com/azl397985856/leetcode/blob/master/91/binary-search.md)
 
