fix: 增加说明，是的阅读更流畅

--- a/problems/1310.xor-queries-of-a-subarray.md
+++ b/problems/1310.xor-queries-of-a-subarray.md
@@ -82,9 +82,27 @@ class Solution:
 
 对 [1,2,3,4,5,6] 来说，其前缀和可以是 pre=[1,3,6,10,15,21]。我们可以使用公式 pre[𝑖]=pre[𝑖−1]+nums[𝑖]得到每一位前缀和的值，从而通过前缀和进行相应的计算和解题。其实前缀和的概念很简单，但困难的是如何在题目中使用前缀和以及如何使用前缀和的关系来进行解题。
 
-这道题是对前缀异或。这里我们利用了异或的一个性质 `x ^ y ^ x = y`。
+这道题是对前缀异或。用代码表示就是：
 
-因此对一个区间进行异或，比如对 nums 的[0,2] 范围进行异或应该是 `nums[0] ^ nums[1] ^ nums[2]`。
+```
+pre[0] = 0
+pre[i] = arr[0] ^ arr[1] ^ ... ^ arr[i - 1]
+```
+
+> ^ 表示异或
+
+其中 pre 就是前缀异或数组，其本质和前缀和类似。接下来对一个区间进行异或，比如对 nums 的[0,2] 范围进行异或应该是 `nums[0] ^ nums[1] ^ nums[2]`。建立了 pre 数组之后，我们就可以使用如下方式计算，而不是类似`nums[0] ^ nums[1] ^ nums[2]`的区间遍历形式。
+
+```
+pre[Li] ^ pre[Ri + 1] = (arr[0] ^ ... ^ arr[Li - 1]) ^ (arr[0] ^ ... ^ arr[Ri])
+                      = (arr[0] ^ ... ^ arr[Li - 1]) ^ (arr[0] ^ ... ^ arr[Li - 1]) ^ (arr[Li] ^ ... ^ arr[Ri])
+                      = (arr[Li] ^ ... ^ arr[Ri])
+                      = arr[Li] ^ ... ^ arr[Ri]
+```
+
+上面成立的前提是异或的一个重要性质 `x ^ y ^ x = y`。用自然语言来说就是异或一组数字，两两相同的会抵消，而上面的除了区间[Li,Ri]内的数，其他数都出现了两次，因此会被抵消。这样就达到了我们的目的。
+
+也就是说如果要计算[Li,Ri] 的异或，不再需要遍历 [Li,Ri] 区间内的所有元素，而是直接用 pre[Li] ^ pre[Ri + 1] 计算即可。时间复杂度从 $$O(R)$$ 降低到了 $$O(1)$$， 其中 R 为区间长度，即 Ri - Li + 1。
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltxsg8v8j30fm0bf74w.jpg)
 
