--- a/problems/1128.number-of-equivalent-domino-pairs.md
+++ b/problems/1128.number-of-equivalent-domino-pairs.md
@@ -127,13 +127,13 @@ Python3 Code:
 
 ```python
 
+
 class Solution:
     def numEquivDominoPairs(self, dominoes: List[List[int]]) -> int:
         counts = [0] * 9 * 9
         ans = 0
         for a, b in dominoes:
-            if a >= b: v = a * 9 + b
-            else: v = b * 9 + a
+            v = min((a - 1) * 9 + (b - 1), (b - 1) * 9 + (a - 1))
             ans += counts[v]
             counts[v] += 1
         return ans
