--- a/problems/40.combination-sum-ii.md
+++ b/problems/40.combination-sum-ii.md
@@ -62,6 +62,47 @@ candidates 中的每个数字在每个组合中只能使用一次。
 
 通用写法的具体代码见下方代码区。
 
+对于一个数组 [1,1,3]，任选其中两项，其组合有 3 种。分别是 (1,3), (1,1) 和 (1,3)。实际上，我们可以将两个 (1,3) 看成一样的（部分题目不能看成一样的，但本题必须看成一样的）。我们可以排序的方式进行剪枝处理。即先对数组进行一次排序，不妨进行一次升序排序。接下来我们需要修改 backrack 函数内部。先来看出修改之前的代码：
+
+```py
+ if target == 0:
+    res.append(path.copy())
+else:
+    for i in range(begin, size):
+        left_num = target - candidates[i]
+        if left_num < 0:
+            break
+        path.append(candidates[i])
+        self._find_path(candidates, path, res, left_num, i+1, size)
+        path.pop()
+```
+
+这里的逻辑一句话概括其实就是 **分别尝试选择 candidates[i] 和不选择 candidates[i]**。对应上面的 [1,1,3]任选两项的例子就是：
+
+- 选择第一个 1，不选择第二个 1，选择 3。就是 [1,3]
+- 不选择第一个 1，选择第二个 1，选择 3。就是 [1,3]
+- ...
+
+那么如果将代码改为：
+
+```py
+
+ if target == 0:
+    res.append(path.copy())
+else:
+    for i in range(begin, size):
+        # 增加下面一行代码
+        if i > begin and candidates[i] == candidate[i - 1]: continue
+        left_num = target - candidates[i]
+        if left_num < 0:
+            break
+        path.append(candidates[i])
+        self._find_path(candidates, path, res, left_num, i+1, size)
+        path.pop()
+```
+
+经过这样的处理，重复的都会被消除。
+
 ## 关键点解析
 
 - 回溯法
@@ -77,7 +118,7 @@ function backtrack(list, tempList, nums, remain, start) {
   else if (remain === 0) return list.push([...tempList]);
   for (let i = start; i < nums.length; i++) {
     // 和39.combination-sum 的其中一个区别就是这道题candidates可能有重复
-    // 代码表示就是下面这一行
+    // 代码表示就是下面这一行。注意 i > start 这一条件
     if (i > start && nums[i] == nums[i - 1]) continue; // skip duplicates
     tempList.push(nums[i]);
     backtrack(list, tempList, nums, remain - nums[i], i + 1); // i + 1代表不可以重复利用， i 代表数字可以重复使用
