--- a/problems/875.koko-eating-bananas.md
+++ b/problems/875.koko-eating-bananas.md
@@ -68,18 +68,19 @@ Python Code:
 
 ```py
 class Solution:
-    def canEatAllBananas(self, piles, H, K):
-        t = 0
-        for pile in piles:
-            t += math.ceil(pile / K)
-        return t <= H
-    def minEatingSpeed(self, piles: List[int], H: int) -> int:
+    def solve(self, piles, k):
+        def possible(mid):
+            t = 0
+            for pile in piles:
+                t += (pile + mid - 1) // mid
+            return t <= k
+
         l, r = 1, max(piles)
-        # [l, r) ， 左闭右开的好处是如果能找到，那么返回 l 和 r 都是一样的，因为最终 l 等于 r。
-        while l < r:
-            mid = (l + r) >> 1
-            if self.canEatAllBananas(piles, H, mid):
-                r = mid
+
+        while l <= r:
+            mid = (l + r) // 2
+            if possible(mid):
+                r = mid - 1
             else:
                 l = mid + 1
         return l
