feat(ml): cpp code

--- a/problems/124.binary-tree-maximum-path-sum.md
+++ b/problems/124.binary-tree-maximum-path-sum.md
@@ -35,7 +35,7 @@ https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/description/
 
 ## 前置知识
 
-- 递归
+- [树](https://github.com/azl397985856/leetcode/blob/master/thinkings/tree.md)
 
 ## 公司
 
@@ -46,9 +46,7 @@ https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/description/
 
 ## 思路
 
-这道题目的 path 让我误解了，然后浪费了很多时间来解这道题
-我觉得 leetcode 给的 demo 太少了，不足以让我理解 path 的概念
-因此我这里自己画了一个图，来补充一下，帮助大家理解 path 的概念，不要像我一样理解错啦。
+这道题目的 path 让我误解了，然后浪费了很多时间来解这道题。我觉得 leetcode 给的 demo 太少了，不足以让我理解 path 的概念因此我这里自己画了一个图，来补充一下，帮助大家理解 path 的概念，不要像我一样理解错啦。
 
 首先是官网给的两个例子：
 
@@ -82,7 +80,7 @@ https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/description/
 
 ## 代码
 
-代码支持：JavaScript，Java，Python
+代码支持：JavaScript，Java，Python, CPP
 
 - JavaScript
 
@@ -173,10 +171,31 @@ class Solution:
         return self.ans
 ```
 
+- CPP
+
+```cpp
+class Solution {
+private:
+    int ans = INT_MIN;
+    int postOrder(TreeNode *root) {
+        if (!root) return INT_MIN;
+        int L = max(0, postOrder(root->left)), R = max(0, postOrder(root->right));
+        ans = max(ans, L + R + root->val);
+        return root->val + max(L, R);
+    }
+public:
+    int maxPathSum(TreeNode* root) {
+        postOrder(root);
+        return ans;
+    }
+};
+
+```
+
 **复杂度分析**
 
-- 时间复杂度：$$O(N)$$
-- 空间复杂度：$$O(N)$$
+- 时间复杂度：$$O(n)$$，其中 n 为节点数。
+- 空间复杂度：$$O(h)$$， 其中 h 为树高。
 
 ## 相关题目
 
