--- a/problems/130.surrounded-regions.md
+++ b/problems/130.surrounded-regions.md
@@ -40,14 +40,14 @@ X O X X
 
 ## 思路
 
-我们需要将所有被X包围的O变成X，并且题目明确说了边缘的所有O都是不可以变成X的。
+我们需要将所有被 X 包围的 O 变成 X，并且题目明确说了边缘的所有 O 都是不可以变成 X 的。
 
 ![130.surrounded-regions](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu7kk7n3j30ee09waap.jpg)
 
-其实我们观察会发现，我们除了边缘的O以及和边缘O连通的O是不需要变成X的，其他都要变成X。
+其实我们观察会发现，我们除了边缘的 O 以及和边缘 O 连通的 O 是不需要变成 X 的，其他都要变成 X。
 
 经过上面的思考，问题转化为连通区域问题。 这里我们需要标记一下`边缘的O以及和边缘O连通的O`。
-我们当然可以用额外的空间去存，但是对于这道题目而言，我们完全可以mutate。这样就空间复杂度会好一点。
+我们当然可以用额外的空间去存，但是对于这道题目而言，我们完全可以 mutate。这样就空间复杂度会好一点。
 
 整个过程如图所示：
 
@@ -55,22 +55,17 @@ X O X X
 
 ![130.surrounded-regions](https://tva1.sinaimg.cn/large/007S8ZIlly1ghlu7ms9mij30mr0b9q4c.jpg)
 
-
-
 ## 关键点解析
 
-- 二维数组DFS解题模板
+- 二维数组 DFS 解题模板
 - 转化问题为`连通区域问题`
-- 直接mutate原数组，节省空间
+- 直接 mutate 原数组，节省空间
 
 ## 代码
 
-* 语言支持：JS，Python3
+- 语言支持：JS，Python3, CPP
 
 ```js
-
-
-
 /*
  * @lc app=leetcode id=130 lang=javascript
  *
@@ -91,7 +86,7 @@ function mark(board, i, j, rows, cols) {
  * @param {character[][]} board
  * @return {void} Do not return anything, modify board in-place instead.
  */
-var solve = function(board) {
+var solve = function (board) {
   const rows = board.length;
   if (rows === 0) return [];
   const cols = board[0].length;
@@ -117,7 +112,9 @@ var solve = function(board) {
   return board;
 };
 ```
+
 Python Code：
+
 ```python
 class Solution:
     def solve(self, board: List[List[str]]) -> None:
@@ -127,9 +124,9 @@ class Solution:
         # 如果数组长或宽小于等于2，则不需要替换
         if len(board) <= 2 or len(board[0]) <= 2:
             return
-        
+
         row, col = len(board), len(board[0])
-        
+
         def dfs(i, j):
             """
             深度优先算法，如果符合条件，替换为A并进一步测试，否则停止
@@ -137,21 +134,21 @@ class Solution:
             if i < 0 or j < 0 or i >= row or j >= col or board[i][j] != 'O':
                 return
             board[i][j] = 'A'
-            
+
             dfs(i - 1, j)
             dfs(i + 1, j)
             dfs(i, j - 1)
             dfs(i, j + 1)
-        
+
         # 从外围开始
         for i in range(row):
             dfs(i, 0)
             dfs(i, col-1)
-        
+
         for j in range(col):
             dfs(0, j)
             dfs(row-1, j)
-        
+
         # 最后完成替换
         for i in range(row):
             for j in range(col):
@@ -161,6 +158,37 @@ class Solution:
                     board[i][j] = 'O'
 ```
 
+CPP Code:
+
+```cpp
+class Solution {
+    int M, N, dirs[4][2] = {{0, 1}, {0, -1}, {1, 0}, {-1, 0}};
+    void dfs(vector<vector<char>> &board, int x, int y) {
+        if (x < 0 || x >= M || y < 0 || y >= N || board[x][y] != 'O') return;
+        board[x][y] = '#';
+        for (auto &dir : dirs) dfs(board, x + dir[0], y + dir[1]);
+    }
+public:
+    void solve(vector<vector<char>>& board) {
+        if (board.empty() || board[0].empty()) return;
+        M = board.size(), N = board[0].size();
+        for (int i = 0; i < M; ++i) {
+            dfs(board, i, 0);
+            dfs(board, i, N - 1);
+        }
+        for (int j = 0; j < N; ++j) {
+            dfs(board, 0, j);
+            dfs(board, M - 1, j);
+        }
+        for (auto &row : board) {
+            for (auto &cell : row) {
+                cell = cell == '#' ? 'O' : 'X';
+            }
+        }
+    }
+};
+```
+
 ## 相关题目
 
 - [200.number-of-islands](./200.number-of-islands.md)
@@ -168,15 +196,12 @@ class Solution:
 > 解题模板是一样的
 
 **复杂度分析**
+
 - 时间复杂度：$$O(row * col)$$
 - 空间复杂度：$$O(row * col)$$
 
-更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经37K star啦。
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 
 关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
 
-
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
-
-
-
