--- a/problems/131.palindrome-partitioning.md
+++ b/problems/131.palindrome-partitioning.md
@@ -51,7 +51,9 @@ https://leetcode-cn.com/problems/palindrome-partitioning/
 
 ## 代码
 
-- 语言支持：JS，Python3
+- 语言支持：JS，Python3, CPP
+
+JS Code:
 
 ```js
 /*
@@ -102,6 +104,8 @@ var partition = function (s) {
 };
 ```
 
+Python Code:
+
 ```python
 class Solution:
     def partition(self, s: str) -> List[List[str]]:
@@ -123,6 +127,35 @@ class Solution:
 
         helper(s, [])
         return res
+```
+
+CPP Code:
+
+```cpp
+	class Solution {
+private:
+  vector<vector<string>> ans;
+  vector<string> tmp;
+  bool isPalindrome(string &s, int first, int last) {
+    while (first < last && s[first] == s[last]) ++first, --last;
+    return first >= last;
+  }
+  void dfs(string &s, int start) {
+    if (start == s.size()) { ans.push_back(tmp); return; }
+    for (int i = start; i < s.size(); ++i) {
+      if (isPalindrome(s, start, i)) {
+        tmp.push_back(s.substr(start, i - start + 1));
+        dfs(s, i + 1);
+        tmp.pop_back();
+      }
+    }
+  }
+public:
+  vector<vector<string>> partition(string s) {
+    dfs(s, 0);
+    return ans;
+  }
+};
 ```
 
 ## 相关题目
