--- a/problems/136.single-number.md
+++ b/problems/136.single-number.md
@@ -57,7 +57,7 @@ https://leetcode-cn.com/problems/single-number/
 
 ## 代码
 
-* 语言支持：JS，C，C++，Java，Python
+- 语言支持：JS，C，C++，Java，Python
 
 JavaScrip Code：
 
@@ -66,7 +66,7 @@ JavaScrip Code：
  * @param {number[]} nums
  * @return {number}
  */
-var singleNumber = function(nums) {
+var singleNumber = function (nums) {
   let ret = 0;
   for (let index = 0; index < nums.length; index++) {
     const element = nums[index];
@@ -78,19 +78,20 @@ var singleNumber = function(nums) {
 
 C Code：
 
-```C
+```c
 int singleNumber(int* nums, int numsSize){
     int res=0;
     for(int i=0;i<numsSize;i++)
     {
         res ^= nums[i];
     }
-    
+
     return res;
 }
 ```
 
 C++ Code：
+
 ```C++
 class Solution {
 public:
@@ -111,6 +112,7 @@ public:
 ```
 
 Java Code：
+
 ```java
 class Solution {
     public int singleNumber(int[] nums) {
@@ -135,7 +137,9 @@ class Solution:
             single_number ^= num
         return single_number
 ```
+
 **复杂度分析**
+
 - 时间复杂度：$$O(N)$$
 - 空间复杂度：$$O(1)$$
 
@@ -165,10 +169,8 @@ class Solution:
 
 Done！
 
-
-更多题解可以访问我的LeetCode题解仓库：https://github.com/azl397985856/leetcode  。 目前已经37K star啦。
+更多题解可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 
 关注公众号力扣加加，努力用清晰直白的语言还原解题思路，并且有大量图解，手把手教你识别套路，高效刷题。
-
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
