--- a/problems/139.word-break.md
+++ b/problems/139.word-break.md
@@ -75,6 +75,10 @@ https://leetcode-cn.com/problems/word-break/
 
 ## 代码
 
+代码支持： JS，CPP
+
+JS Code:
+
 ```js
 /**
  * @param {string} s
@@ -98,10 +102,33 @@ var wordBreak = function (s, wordDict) {
 };
 ```
 
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    bool wordBreak(string s, vector<string>& dict) {
+        unordered_set<string> st(begin(dict), end(dict));
+        int N = s.size();
+        vector<bool> dp(N + 1);
+        dp[0] = true;
+        for (int i = 1; i <= N; ++i) {
+            for (int j = 0; j < i && !dp[i]; ++j) {
+                dp[i] = dp[j] && st.count(s.substr(j, i - j));
+            }
+        }
+        return dp[N];
+    }
+};
+
+```
+
 **复杂度分析**
 
-- 时间复杂度：$$O(N ^ 2)$$
-- 空间复杂度：$$O(N)$$
+令 S 和 W 分别为字符串和字典的长度。
+
+- 时间复杂度：$$O(S ^ 3)$$
+- 空间复杂度：$$O(S + W)$$
 
 大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
