--- a/problems/140.word-break-ii.md
+++ b/problems/140.word-break-ii.md
@@ -62,7 +62,7 @@ wordDict = ["cats", "dog", "sand", "and", "cat"]
 
 ### 代码
 
-代码支持：Python3
+代码支持：Python3, CPP
 
 Python3 Code:
 
@@ -79,6 +79,38 @@ class Solution:
                     backtrack(temp + " " + s[start:i + 1], i + 1)
         backtrack('', 0)
         return ans
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+    int maxLen = 0;
+    unordered_set<string> ws;
+    vector<int> m;
+    vector<string> ans;
+    bool dfs(string &s, int i, string tmp) {
+        if (i == s.size()) {
+            ans.push_back(tmp);
+            return true;
+        }
+        if (m[i] == 0) return m[i];
+        m[i] = 0;
+        for (int j = min((int)s.size(), i + maxLen); j > i; --j) {
+            auto sub = s.substr(i, j - i);
+            if (ws.count(sub) && dfs(s, j, tmp.size() ? tmp + " " + sub : sub)) m[i] = 1;
+        }
+        return m[i];
+    }
+public:
+    vector<string> wordBreak(string s, vector<string>& dict) {
+        ws = { dict.begin(), dict.end() };
+        for (auto &w : dict) maxLen = max(maxLen, (int)w.size());
+        m.assign(s.size(), -1); // -1 = unvisited, 0 = can not reach end, 1 = can reach end.
+        dfs(s, 0, "");
+        return ans;
+    }
+};
 ```
 
 **复杂度分析**
@@ -160,8 +192,10 @@ class Solution:
 
 **复杂度分析**
 
+令 C 为字典的总长度， N 为字典中最长的单词的长度。
+
 - 时间复杂度：$$O(N^2)$$
-- 空间复杂度：$$O(N^2)$$
+- 空间复杂度：$$O(C)$$
 
 这种记忆化递归的方式和 DP 思想一模一样， 大家可以将其改造为 DP，这个留给大家来完成。
 
