--- a/problems/142.Linked-List-Cycle-II.md
+++ b/problems/142.Linked-List-Cycle-II.md
@@ -111,7 +111,7 @@ return fast
 
 ### 代码
 
-- 语言支持: JS, Go, PHP
+- 语言支持: JS, Go, PHP, CPP
 
 JS Code：
 
@@ -207,6 +207,28 @@ class Solution
         return $p;
     }
 }
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    ListNode *detectCycle(ListNode *head) {
+        if (!head) return NULL;
+        auto p = head, q = head;
+        while (p && p->next) {
+            p = p->next->next;
+            q = q->next;
+            if (p == q) break;
+        }
+        if (!p || !p->next) return NULL;
+        p = head;
+        for (; p != q; p = p->next, q = q->next);
+        return p;
+    }
+};
+
 ```
 
 **复杂度分析**
