--- a/problems/146.lru-cache.md
+++ b/problems/146.lru-cache.md
@@ -36,7 +36,7 @@ lRUCache.get(3);    // 返回 3
 lRUCache.get(4);    // 返回 4
 ```
 
-### 思路: 哈希法
+### 思路
 
 1. 确定需要使用的数据结构
    1. 根据题目要求,存储的数据需要保证顺序关系(逻辑层面) ===> 使用数组,链表等保证顺序关系
@@ -66,7 +66,7 @@ lRUCache.get(4);    // 返回 4
       2. 返回该节点的值
    2. 节点不存在, 返回 null
 
-- 伪代码
+伪代码如下：
 
 ```js
 var LRUCache = function(capacity) {
@@ -103,7 +103,9 @@ function put (key, value) {
 };
 ```
 
-- 语言支持: JS, Go, PHP
+## 代码
+
+语言支持: JS, Go, PHP, CPP
 
 JS Code:
 
@@ -373,6 +375,38 @@ class DoubleList
         $node->next->pre = $node->pre;
     }
 }
+```
+
+CPP Code:
+
+```cpp
+class LRUCache {
+private:
+  list<pair<int, int>> data;
+  unordered_map<int, list<pair<int, int>>::iterator> m;
+  int capacity;
+public:
+  LRUCache(int capacity) : capacity(capacity) {}
+
+  int get(int key) {
+    if (!m.count(key)) return -1;
+    data.splice(data.begin(), data, m[key]);
+    m[key] = data.begin();
+    return data.front().second;
+  }
+
+  void put(int key, int value) {
+    if (get(key) == -1) {
+      if (data.size() == capacity) {
+        auto p = data.back();
+        m.erase(p.first);
+        data.pop_back();
+      }
+      data.emplace_front(key, value);
+      m[key] = data.begin();
+    } else data.front().second = value;
+  }
+};
 ```
 
 **复杂度分析**
