--- a/problems/147.insertion-sort-list.md
+++ b/problems/147.insertion-sort-list.md
@@ -147,7 +147,7 @@ class Solution:
 
 ## 代码
 
-代码支持：Python3，Java，JS
+代码支持：Python3，Java，JS, CPP
 
 Python Code:
 
@@ -206,6 +206,26 @@ var insertionSortList = function (head) {
   }
 
   return ans.next;
+};
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    ListNode* insertionSortList(ListNode* head) {
+        ListNode dummy, *p;
+        while (head) {
+            auto *n = head;
+            head = head->next;
+            p = &dummy;
+            while (p->next && p->next->val < n->val) p = p->next;
+            n->next = p->next;
+            p->next = n;
+        }
+        return dummy.next;
+    }
 };
 ```
 
