--- a/problems/150.evaluate-reverse-polish-notation.md
+++ b/problems/150.evaluate-reverse-polish-notation.md
@@ -1,6 +1,5 @@
-
-
 ## 题目地址(150. 逆波兰表达式求值)
+
 https://leetcode-cn.com/problems/evaluate-reverse-polish-notation/
 
 ## 题目描述
@@ -32,7 +31,7 @@ https://leetcode-cn.com/problems/evaluate-reverse-polish-notation/
 
 输入: ["10", "6", "9", "3", "+", "-11", "*", "/", "*", "17", "+", "5", "+"]
 输出: 22
-解释: 
+解释:
 该算式转化为常见的中缀算术表达式为：
   ((10 * (6 / ((9 + 3) * -11))) + 17) + 5
 = ((10 * (6 / (12 * -11))) + 17) + 5
@@ -66,11 +65,12 @@ https://leetcode-cn.com/problems/evaluate-reverse-polish-notation/
 - 腾讯
 
 ## 思路
+
 逆波兰表达式又叫做后缀表达式。在通常的表达式中，二元运算符总是置于与之相关的两个运算对象之间，这种表示法也称为`中缀表示`。
 
-波兰逻辑学家J.Lukasiewicz于1929年提出了另一种表示表达式的方法，按此方法，每一运算符都置于其运算对象之后，故称为`后缀表示`。
+波兰逻辑学家 J.Lukasiewicz 于 1929 年提出了另一种表示表达式的方法，按此方法，每一运算符都置于其运算对象之后，故称为`后缀表示`。
 
-> 逆波兰表达式是一种十分有用的表达式，它将复杂表达式转换为可以依靠简单的操作得到计算结果的表达式。例如(a+b)*(c+d)转换为ab+cd+*
+> 逆波兰表达式是一种十分有用的表达式，它将复杂表达式转换为可以依靠简单的操作得到计算结果的表达式。例如(a+b)_(c+d)转换为 ab+cd+_
 
 思路就是：
 
@@ -84,15 +84,15 @@ https://leetcode-cn.com/problems/evaluate-reverse-polish-notation/
 
 1. 栈的基本用法
 
-2. 如果你用的是JS的话，需要注意/ 和 其他很多语言是不一样的
+2. 如果你用的是 JS 的话，需要注意/ 和 其他很多语言是不一样的
 
-3. 如果你用的是JS的话，需要先将字符串转化为数字。否则有很多意想不到的结果
+3. 如果你用的是 JS 的话，需要先将字符串转化为数字。否则有很多意想不到的结果
 
 4. 操作符的顺序应该是 先出栈的是第二位，后出栈的是第一位。 这在不符合交换律的操作中很重要， 比如减法和除法。
 
 ## 代码
 
-代码支持：JS，Python，Java
+代码支持：JS，Python，Java, CPP
 
 JS Code:
 
@@ -101,7 +101,7 @@ JS Code:
  * @param {string[]} tokens
  * @return {number}
  */
-var evalRPN = function(tokens) {
+var evalRPN = function (tokens) {
   // 这种算法的前提是 tokens是有效的，
   // 当然这由算法来保证
   const stack = [];
@@ -121,7 +121,7 @@ var evalRPN = function(tokens) {
       if (token === "*") {
         stack.push(b * a);
       } else if (token === "/") {
-        stack.push(b / a >> 0);
+        stack.push((b / a) >> 0);
       } else if (token === "+") {
         stack.push(b + a);
       } else if (token === "-") {
@@ -132,9 +132,7 @@ var evalRPN = function(tokens) {
 
   return stack.pop();
 };
-
 ```
-
 
 Python Code:
 
@@ -163,7 +161,6 @@ class Solution:
         return int(tokens[-1])
 ```
 
-
 Java Code:
 
 ```java
@@ -189,10 +186,35 @@ class Solution {
 }
 ```
 
+CPP Code:
+
+```cpp
+	class Solution {
+public:
+  int evalRPN(vector<string>& tokens) {
+    stack<int> s;
+    for (string t : tokens) {
+      if (isdigit(t.back())) s.push(stoi(t));
+      else {
+        int n = s.top();
+        s.pop();
+        switch(t[0]) {
+          case '+': s.top() += n; break;
+          case '-': s.top() -= n; break;
+          case '*': s.top() *= n; break;
+          case '/': s.top() /= n; break;
+        }
+      }
+    }
+    return s.top();
+  }
+};
+```
 
 ## 扩展
 
 逆波兰表达式中只改变运算符的顺序，并不会改变操作数的相对顺序，这是一个重要的性质。另外逆波兰表达式完全不关心操作符的优先级，这在中缀表达式中是做不到的，这很有趣，感兴趣的可以私下查找资料研究下为什么会这样。
 
+```
 
-
+```
