--- a/problems/152.maximum-product-subarray.md
+++ b/problems/152.maximum-product-subarray.md
@@ -67,7 +67,7 @@ var maxProduct = function (nums) {
 
 ## 代码
 
-代码支持：Python3，JavaScript
+代码支持：Python3，JavaScript, CPP
 
 Python3 Code:
 
@@ -133,6 +133,24 @@ var maxProduct = function (nums) {
     res = Math.max(res, max);
   }
   return res;
+};
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    int maxProduct(vector<int>& A) {
+        int maxProd = 1, minProd = 1, ans = INT_MIN;
+        for (int n : A) {
+            int a = n * maxProd, b = n * minProd;
+            maxProd = max({n, a, b});
+            minProd = min({n, a, b});
+            ans = max(ans, maxProd);
+        }
+        return ans;
+    }
 };
 ```
 
