--- a/problems/169.majority-element.md
+++ b/problems/169.majority-element.md
@@ -51,7 +51,7 @@ https://leetcode-cn.com/problems/majority-element/
 
 ## 代码
 
-- 语言支持：JS，Python
+- 语言支持：JS，Python, CPP
 
 Javascript Code:
 
@@ -87,6 +87,26 @@ class Solution:
             else:
                 count -= 1
         return majority
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    int majorityElement(vector<int>& nums) {
+        int ans = 0, cnt = 0;
+        for (int n : nums) {
+            if (ans == n) ++cnt;
+            else if (cnt > 0) --cnt;
+            else {
+                ans = n;
+                cnt = 1;
+            }
+        }
+        return ans;
+    }
+};
 ```
 
 **复杂度分析**
