--- a/problems/145.binary-tree-postorder-traversal.md
+++ b/problems/145.binary-tree-postorder-traversal.md
@@ -62,6 +62,10 @@ https://leetcode-cn.com/problems/binary-tree-postorder-traversal/
 
 ## 代码
 
+代码支持：JS, CPP
+
+JS Code:
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -108,6 +112,33 @@ var postorderTraversal = function (root) {
   }
 
   return ret;
+};
+```
+
+CPP Code:
+
+```cpp
+class Solution {
+public:
+    vector<int> postorderTraversal(TreeNode* root) {
+        vector<int> ans;
+        stack<TreeNode*> s;
+        TreeNode *prev = NULL;
+        while (root || s.size()) {
+            while (root) {
+                s.push(root);
+                root = root->left;
+            }
+            root = s.top();
+            if (!root->right || root->right == prev) {
+                ans.push_back(root->val);
+                s.pop();
+                prev = root;
+                root = NULL;
+            } else root = root->right;
+        }
+        return ans;
+    }
 };
 ```
 
