--- a/problems/1494.parallel-courses-ii.md
+++ b/problems/1494.parallel-courses-ii.md
@@ -67,11 +67,11 @@ xi != yi
 
 首先，我们需要用一个数据结构来存储课程之间的依赖关系。不妨使用 hashmap，这样可以在 $O(1)$ 的时间获取到一个课程的所有前置课程。
 
-接下来，我们使用一个数组 studied 来表示已经学习的课程，其中从 studied[i] 是一个布尔值，表示第 i 个课程是否已经学习。
+接下来，我们使用一个数组 studied 来表示已经学习的课程，其中 studied[i] 是一个布尔值，表示第 i 个课程是否已经学习。
 
-假设我们的 studied 已经确认了，那么下一步我们可以继续学习哪些课程呢？这就需要用到前面的 hashmap 啦，不妨称其为 neighbors，neighbors 的 key 是课程 id，值是 studied 数组。那么如果 neighbors[j] 是当前已经学习的课程数组的子集，那么我们已经达到了学习课程 j 的条件。
+假设我们的 studied 已经确认了，那么下一步我们可以继续学习哪些课程呢？这就需要用到前面的 hashmap 啦，不妨称其为 neighbors，neighbors 的 key 是课程 id，值是 studied 数组，含义是想学习课程 i 必须先把 studied 数组中为 true 的全部学了。那么如果 neighbors[j] 是当前已经学习的课程数组的子集，那么说明当前已经达到了学习课程 j 的条件。
 
-我们可以不断枚举**当前已经学习的课程数组** 的值，并由此确定接下来可以学习的可能集合 sub。得到 sub 之后要做的就是枚举 sub 的子集啦。
+我们可以不断枚举**当前已经学习的课程数组** 的值，并由此确定接下来可以学习的课程集合 sub。得到 sub 之后要做的就是枚举 sub 的子集啦。
 
 如何枚举子集呢？
 
