--- a/problems/995.minimum-number-of-k-consecutive-bit-flips.md
+++ b/problems/995.minimum-number-of-k-consecutive-bit-flips.md
@@ -55,7 +55,7 @@ https://leetcode-cn.com/problems/minimum-number-of-k-consecutive-bit-flips/
 
 ### 思路
 
-首先考虑暴力的解法。暴力的思路可以是从左到右遍历数组，如果碰到一个 0，我们以其为左端进行翻转。翻转的长度自然是以其开始长度为 K 的子数组了。由于是**以其为左端进行翻转**，因此如果遇到一个 0 ，我们必须执行翻转，否则就无法得到全 1 数组。由于翻转的顺序不影响最终结果，即如果最终答案是翻转以 i, j , k 为起点的子数组，那么先翻转谁后翻转谁都是一样的。因为采用从左往右遍历的方式是可以的。
+首先考虑暴力的解法。暴力的思路可以是从左到右遍历数组，如果碰到一个 0，我们以其为左端进行翻转。翻转的长度自然是以其开始长度为 K 的子数组了。由于是**以其为左端进行翻转**，因此如果遇到一个 0 ，我们必须执行翻转，否则就无法得到全 1 数组。由于翻转的顺序不影响最终结果，即如果最终答案是翻转以 i, j , k 为起点的子数组，那么先翻转谁后翻转谁都是一样的。因此采用从左往右遍历的方式是可以的。
 
 概括一下：暴力的思路可以是从左到右遍历数组，如果碰到一个 0，我们以其为左端进行翻转，并修改当前位置开始的长度为 k 的子数组，同时计数器 + 1，最终如果数组不全为 0 则返回 -1 ，否则返回计数器的值。
 
