--- a/problems/1004.max-consecutive-ones-iii.md
+++ b/problems/1004.max-consecutive-ones-iii.md
@@ -58,7 +58,9 @@ A[i] 为 0 或 1 
 相应地，我们需要记录移除窗口的是 0 还是 1:
 
 - 如果是 1，我们什么都不做
-- 如果是 0，说明加进来的时候就是 1，加进来的时候我们 K 减去了 1，这个时候我们再加 1。
+- 如果是 0，说明加进来的时候就是 0，加进来的时候我们 K 减去了 1，这个时候我们再加回去 1。
+
+如果 K 减少到负数，则收缩窗口大小。不断用满足条件的窗口大小更新答案即可。
 
 ### 为什么这种思路可行？
 
@@ -66,17 +68,17 @@ A[i] 为 0 或 1 
 
 比如现在是判断的子数组 A[2:3]，我们计算出 A[2:3] 有一个 0，也就是说需要将一个 0 变成 1 才行。那么当我们继续判断子数组 A[2:4]，我们只需要判断 A[4]，同时结合 A[2:3]的计数信息即可。**滑动窗口就是专门优化这种每次只在端点变化，中间都不变，从而省去了中间即重复计算，进而将窗口内的计数信息从 O(w) 降低到 O(1)**，其中 w 为窗口大小。
 
-接下来，我们继续优化。实际上也是没有必要两层循环枚举所有子数组的。而是在 $O(n)$ 的时间就可以枚举所有的合法子数组。为什么呢？你可以换个角度思考：
+接下来，我们继续优化。实际上也是没有必要两层循环枚举所有子数组的。而是在 $O(n)$ 的时间就可以枚举所有的合法子数组。为什么呢？这是双指针的常见套路。其实你可以换个角度思考：
 
 所有的子数组就是
 
 - 以索引 0 为右端点的所有子数组
-- - 以索引 1 为右端点的所有子数组
-- - 以索引 2 为右端点的所有子数组
+- 加上以索引 1 为右端点的所有子数组
+- 加上以索引 2 为右端点的所有子数组
 - ...
-- - 以索引 n - 1 为右端点的所有子数组，其中 n 为数组长度
+- 加上以索引 n - 1 为右端点的所有子数组，其中 n 为数组长度
 
-这样的话我们就可以使用双指针技巧。右指针模拟右端点，使用左指针模拟左端点了。**如果以索引 i 为右端点的子数组 0 的个数不大于 k，那么左指针 l 没必要右移，因为当前右指针 r 和所有的索引 i, 其中 l <= i <= r 的组合 0 的个数都不会大于 k，而且子数组还更短了，不可能是答案，因此我们直接右移右指针，这是算法的关键**。通过这种方式算法的时间复杂度可从 $O(n^2)$ 降低到 $n$。
+这样的话我们就可以使用双指针技巧。右指针模拟右端点，使用左指针模拟左端点了。**如果以索引 i 为右端点的子数组 0 的个数不大于 k，那么左指针 l 没必要右移，因为当前右指针 r 和所有的索引 i, 其中 l <= i <= r 的组合 0 的个数都不会大于 k，但是子数组还更短了，不可能是答案，因此我们直接右移右指针，这是算法的关键**。通过这种方式算法的时间复杂度可从 $O(n^2)$ 降低到 $n$。
 
 ## 代码
 
