--- a/problems/995.minimum-number-of-k-consecutive-bit-flips.md
+++ b/problems/995.minimum-number-of-k-consecutive-bit-flips.md
@@ -138,6 +138,13 @@ class Solution:
 
 ```
 
+**复杂度分析**
+
+令 n 为数组长度。
+
+- 时间复杂度：$O(n)$
+- 空间复杂度：$O(n)$
+
 双端队列：
 
 ```py
@@ -162,7 +169,7 @@ class Solution:
 令 n 为数组长度。
 
 - 时间复杂度：$O(n)$
-- 空间复杂度：$O(n)$
+- 空间复杂度：$O(k)$
 
 ## 空间复杂度为 O(1) 的算法
 
