--- a/problems/11.container-with-most-water.md
+++ b/problems/11.container-with-most-water.md
@@ -147,7 +147,7 @@ class Solution:
         return ans
 ```
 
-**_复杂度分析_**
+**复杂度分析**
 
 - 时间复杂度：由于左右指针移动的次数加起来正好是 n， 因此时间复杂度为 $O(N)$。
 - 空间复杂度：$O(1)$。
