feat:中位数改版

--- a/problems/4.median-of-two-sorted-arrays.md
+++ b/problems/4.median-of-two-sorted-arrays.md
@@ -40,17 +40,19 @@ nums2 = [3, 4]
 - 百度
 - 腾讯
 
-## 思路
+## 暴力法
+
+### 思路
 
 首先了解一下 Median 的概念，一个数组中 median 就是把数组分成左右等分的中位数。
 
 如下图：
-![image.png](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyup7ixj310w0eote4.jpg)
 
-这道题，很容易想到暴力解法，时间复杂度和空间复杂度都是`O(m+n)`, 不符合题中给出`O(log(m+n))`时间复杂度的要求。
-我们可以从简单的解法入手，试了一下，暴力解法也是可以被 Leetcode Accept 的. 分析中会给出两种解法，暴力求解和二分解法。
+![中位数概念](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyup7ixj310w0eote4.jpg)
 
-#### 解法一 - 暴力 （Brute Force）
+知道了概念，我们先来看下如何使用暴力法来解决。
+
+> 试了一下，暴力解法也是可以被 Leetcode Accept 的。
 
 暴力解主要是要 merge 两个排序的数组`（A，B）`成一个排序的数组。
 
@@ -63,61 +65,18 @@ nums2 = [3, 4]
 4. 如果`j`移动到`B`数组最后，那么直接把剩下的所有`A`依次放入新的数组中.
 5. 如果`i`移动到`A`数组最后，那么直接把剩下的所有`B`依次放入新的数组中.
 
+> 整个过程类似归并排序的合并过程
+
 Merge 的过程如下图。
-![image.png](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltywjka3j30sm13w4ba.jpg)
+![暴力法图解](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltywjka3j30sm13w4ba.jpg)
 
-_时间复杂度： `O(m+n) - m is length of A, n is length of B`_
+时间复杂度和空间复杂度都是`O(m+n)`, 不符合题中给出`O(log(m+n))`时间复杂度的要求。
 
-_空间复杂度： `O(m+n)`_
-
-#### 解法二 - 二分查找 （Binary Search）
-
-由于题中给出的数组都是排好序的，在排好序的数组中查找很容易想到可以用二分查找（Binary Search), 这里对数组长度小的做二分，
-保证数组 A 和 数组 B 做 partition 之后
-
-`len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`
-
-对数组 A 的做 partition 的位置是区间`[0,m]`
-
-如图：
-![image.png](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyypek2j30o6166qmc.jpg)
-
-下图给出几种不同情况的例子（注意但左边或者右边没有元素的时候，左边用`INF_MIN`，右边用`INF_MAX`表示左右的元素：
-![image.png](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyzwjqej31bo0rq1it.jpg)
-
-下图给出具体做的 partition 解题的例子步骤，
-![image.png](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltz2832yj30u011g7ru.jpg)
-
-_时间复杂度： `O(log(min(m, n)) - m is length of A, n is length of B`_
-
-_空间复杂度： `O(1)` - 这里没有用额外的空间_
-
-## 关键点分析
-
-1. 暴力求解，在线性时间内 merge 两个排好序的数组成一个数组。
-2. 二分查找，关键点在于
-
-- 要 partition 两个排好序的数组成左右两等份，partition 需要满足`len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`
-
-- 并且 partition 后 A 左边最大(`maxLeftA`), A 右边最小（`minRightA`), B 左边最大（`maxLeftB`), B 右边最小（`minRightB`) 满足
-  `(maxLeftA <= minRightB && maxLeftB <= minRightA)`
-
-有了这两个条件，那么 median 就在这四个数中，根据奇数或者是偶数，
-
-```
-奇数：
-median = max(maxLeftA, maxLeftB)
-偶数：
-median = (max(maxLeftA, maxLeftB) + min(minRightA, minRightB)) / 2
-```
-
-## 代码
+### 代码
 
 代码支持： Java，JS：
 
 Java Code：
-
-_解法一 - 暴力解法（Brute force）_
 
 ```java
 class MedianTwoSortedArrayBruteForce {
@@ -157,6 +116,8 @@ class MedianTwoSortedArrayBruteForce {
 }
 ```
 
+JS Code:
+
 ```javascript
 /**
  * @param {number[]} nums1
@@ -194,7 +155,71 @@ var findMedianSortedArrays = function (nums1, nums2) {
 - 时间复杂度：$O(max(m, n))$
 - 空间复杂度：$O(m + n)$
 
-_解法二 - 二分查找（Binary Search)_
+## 二分查找
+
+### 思路
+
+如果我们把上一种方法的最终结果拿出来单独看的话，不难发现最终结果就是 nums1 和 nums 两个数组交错形成的新数组，也就是说 nums1 和 nums2 的相对位置并不会发生变化，这是本题的关键信息之一。
+
+为了方便描述，不妨假设最终分割后，数组 nums1 左侧部分是 A，数组 nums2 左侧部分是 B。由于题中给出的数组都是排好序的，在排好序的数组中查找很容易想到可以用二分查找（Binary Search)·, 这里对数组长度小的做二分以减少时间复杂度。对较小的数组做二分可行的原因在于如果一个数组的索引 i 确定了，那么另一个数组的索引位置 j 也是确定的，因为 (i+1) + (j+1) 等于 (m + n + 1) / 2，其中 m 是数组 A 的长度， n 是数组 B 的长度。具体来说，我们可以保证数组 A 和 数组 B 做 partition 之后，`len(Aleft)+len(Bleft)=(m+n+1)/2`
+
+接下来需要特别注意四个指针：leftp1, rightp1, leftp2, rightp2，分别表示 A 数组分割点，A 数组分割点右侧数，B 数组分割点，B 数组分割点右侧数。不过这里有两个临界点需要特殊处理：
+
+- 如果分割点左侧没有数，即分割点索引是 0，那么其左侧应该设置为无限小。
+- 如果分割点右侧没有数，即分割点索引是数组长度-1，那么其左侧应该设置为无限大。
+
+如果我们二分之后满足：`leftp1 < rightp2 and leftp2 < rightp1`,那么说明分割是正确的，直接返回`max(leftp1, leftp2)+min(rightp1, rightp2)` 即可。否则，说明分割无效，我们需要调整分割点。
+
+如何调整呢？实际上只需要判断 leftp1 > rightp2 的大小关系即可。如果 leftp1 > rightp2，那么说明 leftp1 太大了，我们可以通过缩小上界来降低 leftp1，否则我们需要扩大下界。
+
+核心代码：
+
+```py
+if leftp1 > rightp2:
+    hi = mid1 - 1
+else:
+    lo = mid1 + 1
+```
+
+上面的调整上下界的代码是建立在**对数组 nums1 进行二分的基础上的**，如果我们对数组 nums2 进行二分，那么相应地需要改为：
+
+```py
+if leftp2 > rightp1:
+    hi = mid2 - 1
+else:
+    lo = mid2 + 1
+```
+
+下面我们通过一个具体的例子来说明。
+
+比如对数组 A 的做 partition 的位置是区间`[0,m]`
+
+如图：
+![详细算法图解](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyypek2j30o6166qmc.jpg)
+
+下图给出几种不同情况的例子（注意但左边或者右边没有元素的时候，左边用`INF_MIN`，右边用`INF_MAX`表示左右的元素：
+
+![实例解析](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltyzwjqej31bo0rq1it.jpg)
+
+下图给出具体做的 partition 解题的例子步骤，
+
+![更详细的实例解析](https://tva1.sinaimg.cn/large/007S8ZIlly1ghltz2832yj30u011g7ru.jpg)
+
+这个算法关键在于：
+
+1. 要 partition 两个排好序的数组成左右两等份，partition 需要满足`len(Aleft)+len(Bleft)=(m+n+1)/2 - m是数组A的长度， n是数组B的长度`，
+2. 且 partition 后 A 左边最大(`maxLeftA`), A 右边最小（`minRightA`), B 左边最大（`maxLeftB`), B 右边最小（`minRightB`) 满足
+   `(maxLeftA <= minRightB && maxLeftB <= minRightA)`
+
+### 关键点分析
+
+- 有序数组容易想到二分查找
+- 对小的数组进行二分可降低时间复杂度
+- 根据 leftp1,rightp2,leftp2 和 rightp1 的大小关系确定结束点和收缩方向
+
+### 代码
+
+代码支持：JS，CPP， Python3，
 
 JS Code:
 
@@ -306,12 +331,50 @@ public:
 
 ```
 
+Python3 Code:
+
+```py
+class Solution:
+    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:
+        N = len(nums1)
+        M = len(nums2)
+        if N > M:
+            return self.findMedianSortedArrays(nums2, nums1)
+
+        lo = 0
+        hi = N
+        combined = N + M
+
+        while lo <= hi:
+            mid1 = lo + hi >> 1
+            mid2 = ((combined + 1) >> 1) - mid1
+
+            leftp1 = -float("inf") if mid1 == 0 else nums1[mid1 - 1]
+            rightp1 = float("inf") if mid1 == N else nums1[mid1]
+
+            leftp2 = -float("inf") if mid2 == 0 else nums2[mid2 - 1]
+            rightp2 = float("inf") if mid2 == M else nums2[mid2]
+
+            # Check if the partition is valid for the case of
+            if leftp1 <= rightp2 and leftp2 <= rightp1:
+                if combined % 2 == 0:
+                    return (max(leftp1, leftp2)+min(rightp1, rightp2)) / 2.0
+
+                return max(leftp1, leftp2)
+            else:
+                if leftp1 > rightp2:
+                    hi = mid1 - 1
+                else:
+                    lo = mid1 + 1
+        return -1
+```
+
 **复杂度分析**
 
 - 时间复杂度：$O(log(min(m, n)))$
 - 空间复杂度：$O(log(min(m, n)))$
 
-大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 37K star 啦。
+大家对此有何看法，欢迎给我留言，我有时间都会一一查看回答。更多算法套路可以访问我的 LeetCode 题解仓库：https://github.com/azl397985856/leetcode 。 目前已经 40K star 啦。
 大家也可以关注我的公众号《力扣加加》带你啃下算法这块硬骨头。
 
 ![](https://tva1.sinaimg.cn/large/007S8ZIlly1gfcuzagjalj30p00dwabs.jpg)
