--- a/problems/88.merge-sorted-array.md
+++ b/problems/88.merge-sorted-array.md
@@ -51,13 +51,9 @@ for (let i = nums1.length - 1; i >= nums1.length - n; i--) {
 nums1.sort((a, b) => a - b); // 当然你可以自己写排序，这里懒得写了，因为已经偏离了题目本身
 ```
 
-这道题目其实和基本排序算法中的`merge sort`非常像，但是 merge sort 很多时候，合并的时候我们通常是
-新建一个数组，这样就很简单。 但是这道题目要求的是`原地修改`.
+这道题目其实和基本排序算法中的`merge sort`非常像。
 
-这就和 merge sort 的 merge 过程有点不同，我们先来回顾一下 merge sort 的 merge 过程。
-
-merge 的过程`可以`是先比较两个数组的头元素，然后将较小的推到最终的数组中，并将其从原数组中出队列。
-循环直到两个数组都为空。
+我们先来回顾一下 merge sort 的 merge 过程。merge 的过程`可以`是先比较两个数组的**头元素**，然后将较小的推到最终的数组中，并将其从原数组中出队列。不断循环直到两个数组都为空。
 
 具体代码如下：
 
@@ -88,11 +84,11 @@ function merge(nums1, nums2) {
 }
 ```
 
-这里要求原地修改，其实我们能只要从后往前比较，并从后往前插入即可。
+但是 merge sort 很多时候，合并的时候我们通常是新建一个数组，但是这道题目要求的是`原地修改`.这就和 merge sort 的 merge 过程有点不同。这里要求原地修改。如果使用类似上面的方法，如果采用从头开始遍历，**需要将 nums1 的前 m 个数组放到另一个数组中避免写指针写入的干扰**。 这样空间复杂度就是 $O(m)$。其实我们能只要从**后往前比较，并从后往前插入即可。**
 
 我们需要三个指针：
 
-1. current 用于记录当前填补到那个位置了
+1. 写指针 current， 用于记录当前填补到那个位置了
 
 2. m 用于记录 nums1 数组处理到哪个元素了
 
@@ -110,7 +106,7 @@ function merge(nums1, nums2) {
 
 ## 关键点解析
 
-- 从后往前比较，并从后往前插入
+- 从后往前比较，并从后往前插入，这样可避免写指针影响，同时将空间复杂度降低到 $O(1)$
 
 ## 代码
 
