--- a/problems/88.merge-sorted-array.md
+++ b/problems/88.merge-sorted-array.md
@@ -204,21 +204,20 @@ class Solution:
         """
         Do not return anything, modify nums1 in-place instead.
         """
-        # 整体思路相似，只不过没有使用 current 指针记录当前填补位置
+        pos = m + n - 1
         while m > 0 and n > 0:
-            if nums1[m-1] <= nums2[n-1]:
-                nums1[m+n-1] = nums2[n-1]
+            if nums1[m - 1] < nums2[n - 1]:
+                nums1[pos] = nums2[n - 1]
                 n -= 1
             else:
-                nums1[m+n-1] = nums1[m-1]
-                m -=1
-        """
-        由于没有使用 current，第一步比较结束后有两种情况:
-            1. 指针 m>0，n=0，此时不需要做任何处理
-            2. 指针 n>0，m=0，此时需要将 nums2 指针左侧元素全部拷贝到 nums1 的前 n 位
-        """
-        if n > 0:
-            nums1[:n] = nums2[:n]
+                nums1[pos] = nums1[m - 1]
+                m -= 1
+            pos -= 1
+        while n > 0:
+            nums1[pos] = nums2[n - 1]
+            n -= 1
+            pos -= 1
+
 ```
 
 **复杂度分析**
