feat: 增加注意描述

--- a/problems/322.coin-change.md
+++ b/problems/322.coin-change.md
@@ -105,13 +105,14 @@ class Solution:
             return - 1
         dp = [[amount + 1 for _ in range(len(coins) + 1)]
               for _ in range(amount + 1)]
-        # 初始化第一行为0，其他为最大值（也就是amount + 1）
 
+        # 初始化第一行为0，其他为最大值（也就是amount + 1）
         for j in range(len(coins) + 1):
             dp[0][j] = 0
 
         for i in range(1, amount + 1):
             for j in range(1, len(coins) + 1):
+                # 注意：dp[i - coins[j - 1]][j] 含义是硬币无限取， dp[i - coins[j - 1]][j - 1] 的含义就变成了硬币最多取一次
                 if i - coins[j - 1] >= 0:
                     dp[i][j] = min(
                         dp[i][j - 1], dp[i - coins[j - 1]][j] + 1)
