--- a/problems/42.trapping-rain-water.md
+++ b/problems/42.trapping-rain-water.md
@@ -111,15 +111,16 @@ Python Code:
 class Solution:
     def trap(self, heights: List[int]) -> int:
         n = len(heights)
-        l, r = [0] * (n + 1), [0] * (n + 1)
+        l, r = [0] * n, [0] * n
         ans = 0
-        for i in range(1, len(heights) + 1):
+        for i in range(1, len(heights)):
             l[i] = max(l[i - 1], heights[i - 1])
-        for i in range(len(heights) - 1, 0, -1):
-            r[i] = max(r[i + 1], heights[i])
+        for i in range(len(heights) - 2, 0, -1):
+            r[i] = max(r[i + 1], heights[i+1])
         for i in range(len(heights)):
-            ans += max(0, min(l[i + 1], r[i]) - heights[i])
+            ans += max(0, min(l[i], r[i]) - heights[i])
         return ans
+
 ```
 
 C++ Code:
